docs(coverage): update code coverage and test result

--- a/reports/debug/org.flyve.inventory.agent/FragmentAccueil.java.html
+++ b/reports/debug/org.flyve.inventory.agent/FragmentAccueil.java.html
@@ -191,7 +191,7 @@ import org.flyve.inventory.agent.utils.UtilsCrash;
 <span class="nc" id="L188">                    inventoryTask.getJSON(new InventoryTask.OnTaskCompleted() {</span>
                         @Override
                         public void onTaskSuccess(String s) {
-<span class="nc" id="L191">                            ConnectionHTTP.syncWebData(&quot;https://n1jolfx3b3pb.runscope.net&quot;, s);</span>
+<span class="nc" id="L191">                            ConnectionHTTP.syncWebData(&quot;https://inventory.chollima.pro/-1001061475099/&quot;, s);</span>
 <span class="nc" id="L192">                        }</span>
 
                         @Override
