--- a/reports/debug/org.flyve.inventory.agent.utils/ConnectionHTTP.java.html
+++ b/reports/debug/org.flyve.inventory.agent.utils/ConnectionHTTP.java.html
@@ -55,7 +55,7 @@ import java.util.Map;
 <span class="nc" id="L52">	private static int timeout = 18000;</span>
 <span class="nc" id="L53">	private static int readtimeout = 6000;</span>
 
-	private static void runOnUI(Runnable runnable) {
+	public static void runOnUI(Runnable runnable) {
 <span class="nc" id="L56">		uiHandler.post(runnable);</span>
 <span class="nc" id="L57">	}</span>
 
