--- a/reports/debug/org.flyve.inventory.agent/InventoryAgentApp.java.html
+++ b/reports/debug/org.flyve.inventory.agent/InventoryAgentApp.java.html
@@ -105,10 +105,10 @@ import org.flyve.inventory.agent.utils.UtilsCrash;
      * @return string the URL 
      */
     public String getUrl() {
-<span class="pc bpc" id="L105" title="1 of 2 branches missed.">        if (mUrl == null) {</span>
-<span class="fc" id="L106">            mUrl = prefs.getString(&quot;url&quot;,&quot;https://dev.flyve.org/glpi/plugins/fusioninventory/&quot;);</span>
+<span class="nc bnc" id="L105" title="All 2 branches missed.">        if (mUrl == null) {</span>
+<span class="nc" id="L106">            mUrl = prefs.getString(&quot;url&quot;,&quot;&quot;);</span>
         }
-<span class="fc" id="L108">        return mUrl;</span>
+<span class="nc" id="L108">        return mUrl;</span>
     }
 
     /**
