--- a/reports/debug/org.flyve.inventory.agent/AboutActivity.java.html
+++ b/reports/debug/org.flyve.inventory.agent/AboutActivity.java.html
@@ -82,7 +82,7 @@ import java.util.Properties;
 
     private String aboutStr(String version, String build, String date, String commit, String commitFull, String github) {
 <span class="fc" id="L81">        String str = &quot;Inventory Agent, version &quot;+ version +&quot;, build &quot;+ build +&quot;.&lt;br /&gt;&quot;;</span>
-<span class="fc" id="L82">        str += &quot;Built on &quot;+ date +&quot;. Last commit &lt;a href='&quot;+github+&quot;/commit/&quot;+commitFull+&quot;'&gt;&quot;+ commit +&quot;.&lt;br /&gt;&quot;;</span>
+<span class="fc" id="L82">        str += &quot;Built on &quot;+ date +&quot;. Last commit &lt;a href='&quot;+github+&quot;/commit/&quot;+commitFull+&quot;'&gt;&quot;+ commit +&quot;&lt;/a&gt;.&lt;br /&gt;&quot;;</span>
 <span class="fc" id="L83">        str += &quot;© &lt;a href='http://teclib-edition.com/'&gt;Teclib'&lt;/a&gt; 2017. Licensed under &lt;a href='https://www.gnu.org/licenses/gpl-3.0.en.html'&gt;GPLv3&lt;/a&gt;. &lt;a href='https://flyve-mdm.com/'&gt;Flyve MDM&lt;/a&gt;®&quot;;</span>
 
 <span class="fc" id="L85">        return str;</span>
