docs(coverage): update code coverage and test result

--- a/reports/androidTests/connected/org.flyve.inventory.agent.InventoryTest.html
+++ b/reports/androidTests/connected/org.flyve.inventory.agent.InventoryTest.html
@@ -5,17 +5,17 @@ layout: coverage
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>Test results - Class org.flyve.inventory.agent.SplashTest</title>
+<title>Test results - Class org.flyve.inventory.agent.InventoryTest</title>
 <link href="css/base-style.css" rel="stylesheet" type="text/css"/>
 <link href="css/style.css" rel="stylesheet" type="text/css"/>
 <script src="js/report.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="content">
-<h1>Class org.flyve.inventory.agent.SplashTest</h1>
+<h1>Class org.flyve.inventory.agent.InventoryTest</h1>
 <div class="breadcrumbs">
 <a href="index.html">all</a> &gt; 
-<a href="org.flyve.inventory.agent.html">org.flyve.inventory.agent</a> &gt; SplashTest</div>
+<a href="org.flyve.inventory.agent.html">org.flyve.inventory.agent</a> &gt; InventoryTest</div>
 <div id="summary">
 <table>
 <tr>
@@ -37,7 +37,7 @@ layout: coverage
 </td>
 <td>
 <div class="infoBox" id="duration">
-<div class="counter">0.930s</div>
+<div class="counter">1.937s</div>
 <p>duration</p>
 </div>
 </td>
@@ -71,7 +71,7 @@ layout: coverage
 </thead>
 <tr>
 <td>testTakeScreenshot</td>
-<td class="success">passed (0.930s)</td>
+<td class="success">passed (1.937s)</td>
 </tr>
 </table>
 </div>
