--- a/reports/debug/org.flyve.inventory.agent.utils/HttpInventory.java.html
+++ b/reports/debug/org.flyve.inventory.agent.utils/HttpInventory.java.html
@@ -178,7 +178,7 @@ public class HttpInventory {
 <span class="fc" id="L175">                }</span>
 <span class="fc" id="L176">                HttpResponse response = null;</span>
                 try {
-<span class="nc" id="L178">                    response = httpclient.execute(post, context);</span>
+<span class="fc" id="L178">                    response = httpclient.execute(post, context);</span>
 <span class="nc" id="L179">                } catch (ClientProtocolException e) {</span>
 <span class="nc" id="L180">                    FlyveLog.log(this, appContext.getResources().getString(R.string.error_protocol) + e.getLocalizedMessage(), Log.ERROR);</span>
 <span class="nc" id="L181">                    callback.onTaskError(appContext.getResources().getString(R.string.error_protocol));</span>
@@ -191,28 +191,28 @@ public class HttpInventory {
 <span class="nc" id="L188">                } catch (Exception e) {</span>
 <span class="nc" id="L189">                    callback.onTaskError(appContext.getResources().getString(R.string.error_send_fail));</span>
 <span class="nc" id="L190">                    FlyveLog.e(e.getLocalizedMessage());</span>
-<span class="nc" id="L191">                }</span>
-<span class="nc bnc" id="L192" title="All 2 branches missed.">                if (response == null) {</span>
+<span class="pc" id="L191">                }</span>
+<span class="pc bpc" id="L192" title="1 of 2 branches missed.">                if (response == null) {</span>
 <span class="nc" id="L193">                    FlyveLog.log(this, &quot;No HTTP response &quot;, Log.ERROR);</span>
 <span class="nc" id="L194">                    callback.onTaskError(appContext.getResources().getString(R.string.error_server_not_response));</span>
                 }
-<span class="nc" id="L196">                Header[] headers = response.getAllHeaders();</span>
-<span class="nc bnc" id="L197" title="All 2 branches missed.">                for (Header header : headers) {</span>
-<span class="nc" id="L198">                    FlyveLog.log(this, header.getName() + &quot; -&gt; &quot; + header.getValue(), Log.INFO);</span>
+<span class="fc" id="L196">                Header[] headers = response.getAllHeaders();</span>
+<span class="fc bfc" id="L197" title="All 2 branches covered.">                for (Header header : headers) {</span>
+<span class="fc" id="L198">                    FlyveLog.log(this, header.getName() + &quot; -&gt; &quot; + header.getValue(), Log.INFO);</span>
                 }
                 try {
-<span class="nc" id="L201">                    InputStream mIS = response.getEntity().getContent();</span>
-<span class="nc" id="L202">                    BufferedReader r = new BufferedReader(new InputStreamReader(mIS));</span>
+<span class="fc" id="L201">                    InputStream mIS = response.getEntity().getContent();</span>
+<span class="fc" id="L202">                    BufferedReader r = new BufferedReader(new InputStreamReader(mIS));</span>
                     String line;
-<span class="nc" id="L204">                    StringBuilder sb = new StringBuilder();</span>
+<span class="fc" id="L204">                    StringBuilder sb = new StringBuilder();</span>
 
-<span class="nc bnc" id="L206" title="All 2 branches missed.">                    while ((line = r.readLine()) != null) {</span>
-<span class="nc" id="L207">                        FlyveLog.log(this, line, Log.VERBOSE);</span>
-<span class="nc" id="L208">                        sb.append(line + &quot;\n&quot;);</span>
+<span class="fc bfc" id="L206" title="All 2 branches covered.">                    while ((line = r.readLine()) != null) {</span>
+<span class="fc" id="L207">                        FlyveLog.log(this, line, Log.VERBOSE);</span>
+<span class="fc" id="L208">                        sb.append(line + &quot;\n&quot;);</span>
                     }
 
-<span class="nc bnc" id="L211" title="All 2 branches missed.">                    if(sb.toString().toLowerCase().contains(&quot;&lt;reply&gt;&quot;)) {</span>
-<span class="nc" id="L212">                        callback.onTaskSuccess(appContext.getResources().getString(R.string.inventory_sent));</span>
+<span class="pc bpc" id="L211" title="1 of 2 branches missed.">                    if(sb.toString().toLowerCase().contains(&quot;&lt;reply&gt;&quot;)) {</span>
+<span class="fc" id="L212">                        callback.onTaskSuccess(appContext.getResources().getString(R.string.inventory_sent));</span>
                     } else {
 <span class="nc bnc" id="L214" title="All 2 branches missed.">                        if(sb.toString().toLowerCase().contains(&quot;404 not found&quot;)) {</span>
 <span class="nc" id="L215">                            callback.onTaskError(appContext.getResources().getString(R.string.error_url_is_not_found));</span>
@@ -221,13 +221,13 @@ public class HttpInventory {
                         }
                     }
 
-<span class="nc" id="L221">                    FlyveLog.d(sb.toString());</span>
+<span class="fc" id="L221">                    FlyveLog.d(sb.toString());</span>
 <span class="nc" id="L222">                } catch (Exception e) {</span>
 <span class="nc" id="L223">                    FlyveLog.e(e.getMessage());</span>
 <span class="nc" id="L224">                    callback.onTaskError(appContext.getResources().getString(R.string.error_send_fail));</span>
-<span class="nc" id="L225">                }</span>
+<span class="fc" id="L225">                }</span>
 
-<span class="nc" id="L227">            }</span>
+<span class="fc" id="L227">            }</span>
         });
 <span class="fc" id="L229">        t.start();</span>
 <span class="fc" id="L230">    }</span>
